--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,2 +1,11 @@
+<head> 
+ <title>
+  {% if page.title == "Home" %}
+   {{ site.title }} &middot; {{ site.tagline }}
+  {% else %}
+   {{ page.title }} &middot; {{ site.title }}
+  {% endif %}
+ </title>
  <link rel="stylesheet" href="{{ site.baseurl }}/css/execas.css">
+</head>
  
