--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,20 @@
-<head> 
- <title>
-  {% if page.title == "Home" %}
-   {{ site.title }} &middot; {{ site.tagline }}
-  {% else %}
-   {{ page.title }} &middot; {{ site.title }}
-  {% endif %}
- </title>
- <link rel="stylesheet" href="{{ site.baseurl }}/css/execas.css">
-</head>
+<!DOCTYPE html>
+ <html lang="en-us">
+ <head> 
+  <title>
+   {% if page.title == "Home" %}
+    {{ site.title }} &middot; {{ site.tagline }}
+   {% else %}
+    {{ page.title }} &middot; {{ site.title }}
+   {% endif %}
+  </title>
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/execas.css">
+ </head>
+ <body>
+  </body>
+</html>
  
+ 
+ 
+
+
