--- a/css/execas.css
+++ b/css/execas.css
@@ -29,3 +29,16 @@
 .page-title {
     text-transform: uppercase;
 }
+
+a {
+  color: #268bd2;
+  text-decoration: none;
+}
+a strong {
+  color: inherit;
+}
+/* `:focus` is linked to `:hover` for basic accessibility */
+a:hover,
+a:focus {
+  text-decoration: underline;
+}
