--- a/css/execas.css
+++ b/css/execas.css
@@ -2,8 +2,8 @@
     font-size: 75%;
     padding: 0 .5rem 0 .5rem;
     border-radius: 5px;
-    background: #e7f2f7;
-    color: #6a9fb5;
+    background: #333333;
+    color: #fff;
     }
 
 
