--- a/css/execas.css
+++ b/css/execas.css
@@ -7,6 +7,7 @@
     }
 
 
+
 .category-list {
     padding-left: 1rem;
     list-style: none;
@@ -14,6 +15,7 @@
 .category-list h3 {
     font-size: 1rem;
     margin-top: 0;
+    color: #b58900;
 }
 .category-list li small {
     font-size: 75%;
