--- a/css/execas.css
+++ b/css/execas.css
@@ -16,6 +16,7 @@
     font-size: 1rem;
     margin-top: 0;
     color: #b58900;
+    display:inline
 }
 .category-list li small {
     font-size: 75%;
