--- a/css/execas.css
+++ b/css/execas.css
@@ -12,11 +12,14 @@
     padding-left: 1rem;
     list-style: none;
 }
+
+.category-list h2 {
+    color: #d33682;
+}
 .category-list h3 {
     font-size: 1rem;
     margin-top: 0;
-    color: #b58900;
-    display:inline
+    display:inline;
 }
 .category-list li small {
     font-size: 75%;
