--- a/css/execas.css
+++ b/css/execas.css
@@ -27,7 +27,7 @@
 }
 .category-list li a:hover {
     background-color: #707070;
-    color: #000;
+    color: #fff;
     text-decoration: none;
 }
 .category-list li a:hover small {
