--- a/css/execas.css
+++ b/css/execas.css
@@ -41,8 +41,8 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 a {
-  color: #268bd2;
-  text-decoration: none;
+  color: #333333;
+  text-decoration: underline;
 }
 a strong {
   color: inherit;
