--- a/css/execas.css
+++ b/css/execas.css
@@ -26,7 +26,7 @@ h1,h2,h3,h4,h5,h6 {
     font-size: 75%;
     color: #999;
 }
-.category-list li a:hover {
+.tag-mark a:hover {
     background-color: #707070;
     color: #fff;
     text-decoration: none;
