--- a/css/execas.css
+++ b/css/execas.css
@@ -6,6 +6,10 @@
     color: #fff;
     }
 
+html {
+     font-family: 'PT Sans', sans-serif;
+}
+
 h1,h2,h3,h4,h5,h6 {
   font-family: 'PT Sans Narrow', sans-serif;
   font-weight: 700;
