--- a/css/execas.css
+++ b/css/execas.css
@@ -1,6 +1,6 @@
 .tag-mark {
-    font-size: 75%;
-    padding: 0 .5rem 0 .5rem;
+    font-size: 60%;
+    padding: .2rem .5rem .2rem .5rem;
     border-radius: 5px;
     background: #333333;
     color: #fff;
