--- a/css/execas.css
+++ b/css/execas.css
@@ -33,7 +33,6 @@ a:focus {
 
 .category-list h3 {
     font-size: 1rem;
-    color: #333333;
     margin-right: 1rem;
     margin-top: 0;
     display:inline;
@@ -42,8 +41,12 @@ a:focus {
     font-size: 75%;
     color: #999;
 }
+
+.category-list a {
+     color: #333333;
+}
   
-.tag-mark a:hover {
+.tag-mark:hover {
     background-color: #707070;
     color: #fff;
     text-decoration: none;
