--- a/css/execas.css
+++ b/css/execas.css
@@ -47,7 +47,7 @@ list of matching posts beneath tag name header
 }
 
 .tag-mark {
-    font-size: 60%;
+    font-size: 80%;
     padding: .2rem .5rem .2rem .5rem;
     border-radius: 5px;
     background: #333333;
@@ -61,12 +61,13 @@ list of matching posts beneath tag name header
 }
 
 .tag-posts .tag-mark {
+    font-size: 60%;
     background: #707070;
     color: #ffffff;
 }
 
 .tag-posts .tag-mark:hover {
-    background-color: #333333;
+    background-color: #aaaaaa;
     color: #ffffff;
     text-decoration: none;
 }
