--- a/css/execas.css
+++ b/css/execas.css
@@ -49,7 +49,7 @@ list of matching posts beneath tag name header
 .tag-mark {
     font-size: 80%;
     padding: .2rem .5rem .2rem .5rem;
-    border-radius: 2px;
+    border-radius: 5px;
     background: #333333;
     color: #fff;
     }
@@ -63,12 +63,13 @@ list of matching posts beneath tag name header
 .tag-posts .tag-mark {
     padding: .1rem .3rem .1rem .3rem;
     font-size: 60%;
-    background: #707070;
+    border-radius: 3px;
+    background: #aaaaaa;
     color: #ffffff;
 }
 
 .tag-posts .tag-mark:hover {
-    background-color: #aaaaaa;
+    background-color: #dddddd;
     color: #ffffff;
     text-decoration: none;
 }
@@ -76,6 +77,7 @@ list of matching posts beneath tag name header
 .post-tag {
     padding: .1rem .3rem .1rem .3rem;
     font-size: 80%;
+    border-radius: 3px;   
     background: #707070;
     color: #ffffff;
 }
