--- a/css/execas.css
+++ b/css/execas.css
@@ -78,12 +78,12 @@ list of matching posts beneath tag name header
     padding: .1rem .3rem .1rem .3rem;
     font-size: 80%;
     border-radius: 3px;   
-    background: #707070;
+    background: #aaaaaa;
     color: #ffffff;
 }
 
 .post-tag:hover {
-    background-color: #aaaaaa;
+    background-color: #dddddd;
     color: #ffffff;
     text-decoration: none;
 }
