--- a/css/execas.css
+++ b/css/execas.css
@@ -37,6 +37,7 @@ list of matching posts beneath tag name header
     margin-right: 0.5rem;
     margin-top: 0;
     display:inline;
+    font-weight: normal;
 }
 .tag-posts li small {
     font-size: 75%;
