--- a/css/execas.css
+++ b/css/execas.css
@@ -30,7 +30,7 @@ list of matching posts beneath tag name header
 .tag-posts {
     padding-left: 1rem;
     list-style: none;
-    list-style-type: square;
+    
 }
 
 .tag-posts h3 {
@@ -45,6 +45,10 @@ list of matching posts beneath tag name header
     color: #999;
 }
 
+.tag-posts li {
+     margin-bottom: 0.5rem;
+     martin-top: 0rem;
+}
 .tag-posts h3 a {
      color: #333333;
 }
