--- a/css/execas.css
+++ b/css/execas.css
@@ -24,7 +24,8 @@ list of matching posts beneath tag name header
 */
 .tag-header {
      color: #d33682;
-     text-transform: capitalize
+     text-transform: capitalize;
+     margin-bottom: 0.5rem;
 }
 
 .tag-posts {
