--- a/css/execas.css
+++ b/css/execas.css
@@ -3,6 +3,13 @@ html {
      font-size: 16px;
 }
 
+body {
+     width: 70%;
+     background-color: #ffffff;
+     margin: 0 auto;
+     max-width: 23cm;
+}
+
 h1,h2,h3,h4,h5,h6 {
   font-family: 'PT Sans Narrow', sans-serif;
   font-weight: 700;
