--- a/css/execas.css
+++ b/css/execas.css
@@ -8,7 +8,7 @@ body {
      background-color: #ffffff;
      margin: 0 auto;
      max-width: 23cm;
-     border: 1px;
+     border-width: 1px;
      border-color:#707070;
 }
 
