--- a/css/execas.css
+++ b/css/execas.css
@@ -1,6 +1,7 @@
 html {
      font-family: 'PT Sans', sans-serif;
      font-size: 16px;
+     background-color: #707070;
 }
 
 body {
@@ -8,8 +9,6 @@ body {
      background-color: #ffffff;
      margin: 0 auto;
      max-width: 23cm;
-     border-width: 1px;
-     border-color:#707070;
 }
 
 h1,h2,h3,h4,h5,h6 {
