--- a/css/execas.css
+++ b/css/execas.css
@@ -1,7 +1,7 @@
 html {
      font-family: 'PT Sans', sans-serif;
      font-size: 16px;
-     background-color: #707070;
+     background-color: #eeeeee;
 }
 
 body {
@@ -9,6 +9,7 @@ body {
      background-color: #ffffff;
      margin: 0 auto;
      max-width: 23cm;
+     padding:1rem;
 }
 
 h1,h2,h3,h4,h5,h6 {
