--- a/css/execas.css
+++ b/css/execas.css
@@ -1,7 +1,7 @@
 html {
      font-family: 'PT Sans', sans-serif;
      font-size: 16px;
-     background-color: #eeeeee;
+     background-color: #e5e5e5;
 }
 
 body {
