--- a/css/execas.css
+++ b/css/execas.css
@@ -8,7 +8,8 @@ body {
      width: 70%;
      background-color: #ffffff;
      margin: 0 auto;
-     max-width: 23cm;
+     min-width:600px;
+     max-width:2000px
      padding:1rem;
 }
 
