--- a/css/execas.css
+++ b/css/execas.css
@@ -9,7 +9,7 @@ body {
      background-color: #ffffff;
      margin: 0 auto;
      min-width:600px;
-     max-width:2000px
+     max-width:2000px;
      padding:1rem;
 }
 
