--- a/css/execas.css
+++ b/css/execas.css
@@ -6,6 +6,7 @@ html {
 
 body {
      width: 50%;
+     min-width:600px;
      background-color: #ffffff;
      margin: 0 auto;
      padding:1rem;
@@ -15,21 +16,13 @@ body {
      body {
           width: 100%;
      }
+     html {
+          font-family: 'PT Sans', sans-serif;
+          font-size: 16px;
+          background-color: #e5e5e5;
+}
 }
 
-@media screen and (max-width: 767px) {
-     /* start of medium tablet styles */
-     body {
-          width: 100%;
-     }
-}
-
-@media screen and (max-width: 479px) {
-     /* start of phone styles */
-     body {
-          width: 100%;
-     }
-}
 
 h1,h2,h3,h4,h5,h6 {
   font-family: 'PT Sans Narrow', sans-serif;
