--- a/css/execas.css
+++ b/css/execas.css
@@ -12,6 +12,15 @@ body {
      padding:1rem;
 }
 
+
+@media screen and (max-width: 1081px) {
+     /* start of large tablet styles */
+     body {
+          width: 50%;
+     }
+}
+
+
 pre {
      white-space: pre;
      overflow: auto;
