--- a/css/execas.css
+++ b/css/execas.css
@@ -5,10 +5,17 @@ html {
 }
 
 body {
-     width:600px;
+     width: 23cm;
      background-color: #ffffff;
      margin: 0 auto;
      padding:1rem;
+}
+
+/* On screens that are 992px or less, set the background color to blue */
+@media screen and (max-width: 1080px) {
+  body {
+    width: auto;
+  }
 }
 
 
