--- a/css/execas.css
+++ b/css/execas.css
@@ -15,7 +15,7 @@ body {
 /* On screens that are 992px or less, set the background color to blue */
 @media screen and (max-width: 1080px) {
   body {
-    width: auto;
+    width: 100%;
   }
 }
 
