--- a/css/execas.css
+++ b/css/execas.css
@@ -11,6 +11,13 @@ body {
      padding:1rem;
 }
 
+@media only screen and (min-width: 481px) {
+  body {
+    padding-top: 24px;
+    padding-right: 24px;
+    padding-left: 24px;
+  }
+
 pre {
      white-space: pre;
      overflow: auto;
