--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<section id="wrapper" class="group">
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
@@ -14,3 +14,4 @@ layout: default
     {{ content }}
   </article>
 </div>
+</section>
