--- a/css/execas.css
+++ b/css/execas.css
@@ -9,9 +9,10 @@ body {
 }
 
 #wrapper {
+     padding: 100px 40px 100px 40px;
      max-width: 720px;
      background-color: #ffffff;
-     margin: 0 autp=o; 
+     margin: 0 auto; 
 }
 
 @media only screen and (min-width: 481px) {
