--- a/css/execas.css
+++ b/css/execas.css
@@ -25,8 +25,7 @@ body {
 pre {
      white-space: pre;
      overflow: auto;
-     border-width: 1px;
-     border-color: #707070;
+     font-size:12px;
 }
 
 h1,h2,h3,h4,h5,h6 {
