--- a/css/execas.css
+++ b/css/execas.css
@@ -25,8 +25,9 @@ pre code {
 code {
      background-color: #fefefe;
      font-size:12px;
-     border-color: #eeeeee;
-     border-size: 1px;
+     border-width: 1px;
+     border-style: solid;
+     border-color: #eeeeee
 }
 
 h1,h2,h3,h4,h5,h6 {
