--- a/css/execas.css
+++ b/css/execas.css
@@ -19,7 +19,8 @@ pre code {
      white-space: pre;
      overflow: auto;
      font-size:12px;
-     background-color: #ffffff;
+     background-color: #fefefe;
+     border-style: none;
 }
 
 code {
