--- a/css/execas.css
+++ b/css/execas.css
@@ -19,7 +19,7 @@ pre code {
      white-space: pre;
      overflow: auto;
      font-size:12px;
-     background-color: #fefefe;
+     background-color: #f8f8f8;
      border-style: none;
 }
 
