--- a/css/execas.css
+++ b/css/execas.css
@@ -15,6 +15,11 @@ body {
      margin: 0 auto; 
 }
 
+img {
+     margin: 0 auto;
+     max-width: 600px;
+}
+
 pre {
      background-color: #f8f8ff;
      padding-left: 5px;
