--- a/css/execas.css
+++ b/css/execas.css
@@ -16,8 +16,11 @@ body {
 }
 
 img {
-     margin: 0 auto;
-     max-width: 600px;
+     display:block;
+     margin-left: auto;
+     margin-right: auto;
+     max-width: 80%;
+     height: auto;
 }
 
 pre {
