--- a/css/execas.css
+++ b/css/execas.css
@@ -16,11 +16,8 @@ body {
 }
 
 img {
-     display:block;
-     margin-left: auto;
-     margin-right: auto;
-     max-width: 80%;
-     height: auto;
+
+     max-width: 100%
 }
 
 pre {
