--- a/css/execas.css
+++ b/css/execas.css
@@ -16,10 +16,12 @@ body {
 }
 
 img {
+     display:block;
      max-width: 100%;
      margin-left: auto;
      margin-right: auto;
 }
+
 
 pre {
      background-color: #f8f8ff;
