--- a/css/execas.css
+++ b/css/execas.css
@@ -103,7 +103,7 @@ list of matching posts beneath tag name header
     font-size: 80%;
     padding: .2rem .5rem .2rem .5rem;
     border-radius: 5px;
-    margin-bottom:.2rem;
+    margin-bottom:1rem;
     background: #333333;
     color: #fff;
     }
