--- a/css/execas.css
+++ b/css/execas.css
@@ -102,7 +102,7 @@ list of matching posts beneath tag name header
 .top-tagmarks {
      max-width: 600px;
      margin: 0 auto;
-     display:inline-block;
+     display:block;
 }
 
 .tag-mark {
