--- a/css/execas.css
+++ b/css/execas.css
@@ -107,6 +107,7 @@ list of matching posts beneath tag name header
 .tag-mark {
     font-size: 80%;
     margin: .2rem .5rem .2rem .5rem;
+    padding: .2rem .5rem .2rem .5rem;
     border-radius: 5px;
     margin-top:3rem;
     background: #333333;
@@ -121,6 +122,8 @@ list of matching posts beneath tag name header
 
 .tag-posts .tag-mark {
     padding: .1rem .3rem .1rem .3rem;
+    margin: .1rem .3rem .1rem .3rem;
+
     font-size: 60%;
     border-radius: 3px;
     background: #aaaaaa;
