--- a/css/execas.css
+++ b/css/execas.css
@@ -122,8 +122,7 @@ list of matching posts beneath tag name header
 
 .tag-posts .tag-mark {
     padding: .1rem .3rem .1rem .3rem;
-    margin: .1rem .3rem .1rem .3rem;
-
+    margin: 0;
     font-size: 60%;
     border-radius: 3px;
     background: #aaaaaa;
