--- a/css/execas.css
+++ b/css/execas.css
@@ -103,6 +103,7 @@ list of matching posts beneath tag name header
     font-size: 110%;
     color: #333;
     font-weight: bold;
+    margin-right: 1rem;
     }
 
 .tag-mark:hover {
