--- a/css/execas.css
+++ b/css/execas.css
@@ -114,6 +114,7 @@ list of matching posts beneath tag name header
 .tag-posts .tag-mark {
     padding: .1rem .3rem .1rem .3rem;
     margin: 0;
+    font-weight: normal;
     font-size: 60%;
     border-radius: 3px;
     background: #aaaaaa;
