--- a/css/execas.css
+++ b/css/execas.css
@@ -25,6 +25,7 @@ img {
 pre {
      background-color: #f8f8ff;
      padding-left: 5px;
+     padding-bottom; 3px;
      border-left: 5px solid #707070;
      white-space: pre;
      overflow: auto;
