--- a/css/execas.css
+++ b/css/execas.css
@@ -114,7 +114,7 @@ list of matching posts beneath tag name header
 }
 
 .tag-posts .tag-mark {
-    padding: .1rem .1rem .1rem .1rem;
+    padding: 1px 3px 1px;
     margin: 0;
     font-weight: normal;
     font-size: 60%;
