--- a/css/execas.css
+++ b/css/execas.css
@@ -23,7 +23,7 @@ img {
 }
 
 pre {
-     background-color: #fffff0;
+     background-color: #fafafa;
      padding-left: 5px;
      padding-bottom; 3px;
      border-left: 5px solid #707070;
@@ -33,7 +33,7 @@ pre {
 pre code {
      font-size:12px;
      border-style: none;
-     background-color: #fffff0;
+     background-color: #fafafa;
 }
 code {
      background-color: #fefefe;
