--- a/css/execas.css
+++ b/css/execas.css
@@ -23,17 +23,18 @@ img {
 }
 
 pre {
-     background-color: #f7f7f7;
+     background-color: #363636;
      padding-left: 5px;
      padding-bottom; 3px;
      border-left: 5px solid #707070;
      white-space: pre;
+     color:#f8f8ff;
      overflow: auto;
 }
 pre code {
      font-size:12px;
      border-style: none;
-     background-color: #f7f7f7;
+     background-color: #363636;
 }
 code {
      background-color: #fefefe;
