--- a/css/execas.css
+++ b/css/execas.css
@@ -23,7 +23,7 @@ img {
 }
 
 pre {
-     background-color: #f8f8ff;
+     background-color: #f6f8fa;
      padding-left: 5px;
      padding-bottom; 3px;
      border-left: 5px solid #707070;
@@ -32,9 +32,10 @@ pre {
      overflow: auto;
 }
 pre code {
+     font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New;
      font-size:14px;
      border-style: none;
-     background-color: #f8f8ff;
+     background-color: #f6f8fa;
 }
 code {
      background-color: #fefefe;
