--- a/css/execas.css
+++ b/css/execas.css
@@ -5,7 +5,8 @@ html, body {
 body {
      font-family: 'PT Sans', sans-serif;
      font-size: 16px;
-     background-color: #e5e5e5;
+     /*background-color: #e5e5e5;*/
+     background-color: #5F6265;
 }
 
 #wrapper {
