--- a/css/execas.css
+++ b/css/execas.css
@@ -26,7 +26,8 @@ img {
 pre {
      background-color: #f6f8fa;
      padding-left: 5px;
-     padding-bottom; 3px;
+     padding-bottom 7px;
+     padding-top: 7px;
      border-left: 5px solid #707070;
      white-space: pre;
      color:#000000;
