--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,9 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/css/execas.css">
  </head>
  <body>
+  <div class="header">
+   EXEC <a href=>Latest</a> <a href=>Tags</a> <a href=>About</a>
+  </div>
   {{ content }}
   </body>
 </html>
