--- a/css/execas.css
+++ b/css/execas.css
@@ -67,6 +67,9 @@ a:focus {
      height:100px;
      background-color:#000;
      color: #fff;
+     margin:0 auto;
+     max-width: 720px;
+     
 }
 
 /* 
