--- a/css/execas.css
+++ b/css/execas.css
@@ -65,7 +65,7 @@ a:focus {
 
 .header {
      height:30px;
-     background-color:#aaaaaa;
+     background-color:#9d9d9d;
      color: #fff;
      margin:0 auto;
      max-width: 720px;
