--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
  </head>
  <body>
   <div class="header">
-   EXEC <a href={{site.baseurl}}>Latest</a> <a href={{site.tags_page}}>Tags</a> <a href=>About</a>
+   EXEC <a href={{site.baseurl}}>Latest</a> <a href={{site.tag_page}}>Tags</a> <a href=>About</a>
   </div>
   {{ content }}
   </body>
