--- a/css/execas.css
+++ b/css/execas.css
@@ -119,6 +119,7 @@ list of matching posts beneath tag name header
     font-size: 110%;
     color: #555555;
     font-weight: bold;
+    font-style: italic;
     margin-right: 1rem;
     }
 
