--- a/css/execas.css
+++ b/css/execas.css
@@ -125,6 +125,7 @@ list of matching posts beneath tag name header
 .tag-mark:hover {
     color: #d33682;
     font-style: normal;
+    text-decoration:none;
 }
 
 .tagsunderpost {
