--- a/css/execas.css
+++ b/css/execas.css
@@ -77,6 +77,7 @@ a:focus {
      font-size: 3rem;
      margin-right: 3rem;
      color: #000;
+     display: inline;
 }
 /* 
 list of matching posts beneath tag name header 
