--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
  </head>
  <body>
   <div class="header">
-   <h1>EXEC</h1> <a href={{site.home_page}}>Latest</a> | <a href={{site.tag_page}}>Tags</a> | <a href=>About</a>
+   <h1>exec</h1> <a href={{site.home_page}}>Latest</a> | <a href={{site.tag_page}}>Tags</a> | <a href=>About</a>
   </div>
   {{ content }}
   </body>
