--- a/css/execas.css
+++ b/css/execas.css
@@ -64,7 +64,7 @@ a:focus {
 }
 
 .header {
-     background-color:#f8f8ff;
+     background-color:#fffafa;
      color: #fff;
      margin:0 auto;
      max-width: 720px;
@@ -167,7 +167,8 @@ postinfo: title, date, tags
 }
        
 .post-title {
-     font-size: 3rem;
+     font-size: 2rem;
+     color:#444444;
      margin-bottom:0.5rem;
 }
 
@@ -195,9 +196,9 @@ END: postinfo
 
      
 .post h2 {
-     color: #d33682;
-     font-size: 2rem;
-     margin-top: 1.5rem;
+     color: #333333;
+     margin-top:1.5rem;
+     margin-bottom:0.6rem;
 }
 
 .post h2 code {
@@ -206,9 +207,9 @@ END: postinfo
 }
 
 .post h3 {
-     color: #333333;
-     margin-top:1.5rem;
-     margin-bottom:0.6rem;
+     color: #d33682;
+     font-size: 2rem;
+     margin-top: 1.5rem;
 }
 
 .page-title {
