--- a/css/execas.css
+++ b/css/execas.css
@@ -64,7 +64,7 @@ a:focus {
 }
 
 .header {
-     background-color:#fffafa;
+     background-color:#fffaf0;
      color: #fff;
      margin:0 auto;
      max-width: 720px;
