--- a/css/execas.css
+++ b/css/execas.css
@@ -64,8 +64,8 @@ a:focus {
 }
 
 .header {
-     background-color:#fffaf0;
-     color: #fff;
+     background-color:#000000;
+     color: #f8f8ff;
      margin:0 auto;
      max-width: 720px;
      padding: 10px 15px 10px 15px;
