--- a/css/execas.css
+++ b/css/execas.css
@@ -75,7 +75,7 @@ a:focus {
 .header h1 {
      font-size: 3rem;
      margin-right: 3rem;
-     color: #000;
+     color: #f8f8ff;
      display: inline;
      margin-top: 0px;
      margin-bottom:0px;
