--- a/css/execas.css
+++ b/css/execas.css
@@ -85,7 +85,8 @@ a:focus {
 
 .header a {
      color: #d33682;
-     size: 1.2rem;
+     size: 1.5rem;
+     font-weight:bold;
 }
 /* 
 list of matching posts beneath tag name header 
