--- a/css/execas.css
+++ b/css/execas.css
@@ -85,8 +85,8 @@ a:focus {
 
 .header a {
      color: #d33682;
-     size: 1.5rem;
-     font-weight:bold;
+     size: 2rem;
+     font-weight:normal;
 }
 /* 
 list of matching posts beneath tag name header 
