--- a/css/execas.css
+++ b/css/execas.css
@@ -76,7 +76,7 @@ a:focus {
 .header h1 {
      font-size: 3rem;
      margin-right: 3rem;
-     color: #f8f8ff;
+     color: #2f4f4f;
      display: inline;
      margin-top: 0px;
      margin-bottom:0px;
