--- a/css/execas.css
+++ b/css/execas.css
@@ -64,7 +64,7 @@ a:focus {
 }
 
 .header {
-     background-color:#000000;
+     background-color:#2f4f4f;
      color: #f8f8ff;
      margin:0 auto;
      max-width: 720px;
@@ -76,7 +76,7 @@ a:focus {
 .header h1 {
      font-size: 3rem;
      margin-right: 3rem;
-     color: #2f4f4f;
+     color: #f8f8ff;
      display: inline;
      margin-top: 0px;
      margin-bottom:0px;
