--- a/css/execas.css
+++ b/css/execas.css
@@ -64,7 +64,7 @@ a:focus {
 }
 
 .header {
-     background-color:#2f4f4f;
+     background-color:#696969;
      color: #f8f8ff;
      margin:0 auto;
      max-width: 720px;
