--- a/css/execas.css
+++ b/css/execas.css
@@ -6,7 +6,7 @@ body {
      font-family: 'PT Sans', sans-serif;
      font-size: 16px;
      /*background-color: #e5e5e5;*/
-     background-color: #5F6265;
+     background-color: #e5e5e5;
 }
 
 #wrapper {
