--- a/css/execas.css
+++ b/css/execas.css
@@ -69,6 +69,7 @@ a:focus {
      margin:0 auto;
      max-width: 720px;
      padding: 10px 13px 10px 13px;
+     border: 2px solid #262626
      border radius: 15px 50px 30px 5px;     
 }
 
