--- a/css/execas.css
+++ b/css/execas.css
@@ -3,7 +3,8 @@ html, body {
 }
 
 body {
-     font-family: 'PT Sans', sans-serif;
+     /*font-family: 'PT Sans', sans-serif;*/
+     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; 
      font-size: 16px;
      /*background-color: #e5e5e5;*/
      background-color: #f2f2f2;
