--- a/css/execas.css
+++ b/css/execas.css
@@ -207,7 +207,8 @@ END: postinfo
 .post h2 {
      color: #d33682;
      font-size: 1.7rem;
-     margin-top: 3rem;
+     margin-top: 2rem;
+     margin-bottom:0rem;
 }
 
 .post h2 code {
