--- a/css/execas.css
+++ b/css/execas.css
@@ -26,6 +26,7 @@ img {
 
 pre {
      background-color: #f6f8fa;
+     margin-left:5px;
      padding-left: 5px;
      padding-bottom: 7px;
      padding-top: 7px;
