--- a/css/execas.css
+++ b/css/execas.css
@@ -43,6 +43,7 @@ pre code {
 }
 code {
      background-color: #fefefe;
+     color:#d33682;
      font-size:12px;
      border-width: 1px;
      border-style: solid;
