--- a/css/execas.css
+++ b/css/execas.css
@@ -69,7 +69,7 @@ a:focus {
 }
 
 p {
-     margin-top: 5px;
+     margin: 1em 0px;
 }
 
 .header {
@@ -216,7 +216,7 @@ END: postinfo
      color: #d33682;
      font-size: 1.7rem;
      margin-top: 2rem;
-     margin-bottom:0rem;
+     margin-bottom:2rem;
 }
 
 .post h2 code {
@@ -227,6 +227,6 @@ END: postinfo
 .post h3 {
      color: #707070;
      margin-top:2rem;
-     margin-bottom:0rem;
+     margin-bottom:2rem;
 
 }
