--- a/css/execas.css
+++ b/css/execas.css
@@ -42,12 +42,10 @@ blockquote {
      background-color: #f6f8fa;
      margin-left:5px;
      padding-left: 5px;
-     padding-bottom: 12px;
-     padding-top: 12px;
-     border-left: 5px solid #;
-     white-space: pre;
+     padding-bottom: 2px;
+     padding-top: 22px;
+     border-left: 5px solid #d33682;
      color:#d33682;
-     overflow: auto;
 }
 
 pre code {
