--- a/css/execas.css
+++ b/css/execas.css
@@ -45,7 +45,7 @@ blockquote {
      padding-bottom: 2px;
      padding-top: 22px;
      border-left: 5px solid #d33682;
-     color:#d33682;
+     color:#000000;
 }
 
 pre code {
