--- a/css/execas.css
+++ b/css/execas.css
@@ -48,6 +48,10 @@ blockquote {
      color:#000000;
 }
 
+blockquote p {
+     font-size: 12px;
+}
+
 pre code {
      font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New;
      font-size:14px;
