--- a/css/execas.css
+++ b/css/execas.css
@@ -39,7 +39,7 @@ pre {
 
 
 blockquote {
-     background-color: #f6ffff;
+     background-color: #ffffff;
      margin-left:5px;
      padding-left: 5px;
      padding-bottom: 2px;
