--- a/css/execas.css
+++ b/css/execas.css
@@ -46,6 +46,7 @@ blockquote {
      padding-top: 2px;
      border-left: 5px solid #d33682;
      color:#000000;
+     width: 300px;
 }
 
 blockquote code {
