--- a/css/execas.css
+++ b/css/execas.css
@@ -44,7 +44,7 @@ blockquote {
      padding-left: 5px;
      padding-bottom: 2px;
      padding-top: 2px;
-     border-left: 5px solid #d33682;
+     border-left: 5px solid #dddddd;
      color:#000000;
      width: 300px;
 }
