--- a/css/execas.css
+++ b/css/execas.css
@@ -26,7 +26,7 @@ img {
 }
 
 pre {
-     background-color: #f6f8fa;
+     background-color: #f5f5f5;
      margin-left:5px;
      padding-left: 5px;
      padding-bottom: 12px;
