--- a/css/execas.css
+++ b/css/execas.css
@@ -63,7 +63,7 @@ pre code {
      font-size:14px;
      border-style: none;
      color:#000000;
-     background-color: #f6f8fa;
+     background-color: #f5f5f5;
 }
 code {
      background-color: #fefefe;
