--- a/css/execas.css
+++ b/css/execas.css
@@ -7,7 +7,8 @@ body {
      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; 
      font-size: 16px;
      /*background-color: #e5e5e5;*/
-     background-color: #f2f2f2;
+     /*background-color: #f2f2f2;*/
+     background-color: #ffffff
 }
 
 #wrapper {
@@ -35,7 +36,7 @@ pre {
      white-space: pre;
      color:#000000;
      overflow: auto;
-     border-radius: 0px 30px 0px 0px;     
+     border-radius: 0px 5px 5px 0px;     
 
 }
 
