--- a/css/execas.css
+++ b/css/execas.css
@@ -32,7 +32,7 @@ pre {
      padding-left: 5px;
      padding-bottom: 12px;
      padding-top: 12px;
-     border: 1px solid #f6f8fa;
+     border: 1px solid #ccc;
      border-left: 5px solid #707070;
      white-space: pre;
      color:#000000;
