--- a/css/execas.css
+++ b/css/execas.css
@@ -27,13 +27,14 @@ img {
 }
 
 pre {
-     background-color: #f5f5f5;
+     /*background-color: #f5f5f5;*/
+     background-color: #f6f8fa;
      margin-left:5px;
      padding-left: 5px;
      padding-bottom: 12px;
      padding-top: 12px;
      border: 1px solid #ccc;
-     border-left: 2px solid #707070;
+     border-left: 4px solid #707070;
      white-space: pre;
      color:#000000;
      overflow: auto;
@@ -48,7 +49,7 @@ blockquote {
      padding-left: 5px;
      padding-bottom: 2px;
      padding-top: 2px;
-     border-left: 2px solid #dddddd;
+     border-left: 4px solid #dddddd;
      color:#000000;
 }
 
