--- a/css/execas.css
+++ b/css/execas.css
@@ -76,6 +76,7 @@ code {
      border-style: solid;
      border-radius:5px;
      border-color: #eeeeee
+     padding:1px 3px;
 }
 
 h1,h2,h3,h4,h5,h6 {
