--- a/css/execas.css
+++ b/css/execas.css
@@ -4,7 +4,7 @@ html, body {
 
 body {
      /*font-family: 'PT Sans', sans-serif;*/
-     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; 
+     font-family:"Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
      font-size: 16px;
      /*background-color: #e5e5e5;*/
      /*background-color: #f2f2f2;*/
@@ -62,8 +62,7 @@ blockquote p {
 }
 
 pre code {
-     font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New;
-     font-size:14px;
+     font-family: "Source Code Pro",Menlo,Monaco,Consolas,"Courier New",monospace font-size:14px;
      border-style: none;
      color:#000000;
      background-color: #f6f8fa;
