--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
  <head> 
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <meta name="HandheldFriendly" content="true">
   <title>
    {% if page.title == "Home" %}
