--- a/css/execas.css
+++ b/css/execas.css
@@ -30,7 +30,7 @@ pre {
      /*background-color: #f5f5f5;*/
      background-color: #f6f8fa;
      margin-left:5px;
-     padding-left: 5px;
+     /*padding-left: 5px;*/
      padding-bottom: 12px;
      padding-top: 12px;
      border: 1px solid #ccc;
