--- a/css/execas.css
+++ b/css/execas.css
@@ -260,7 +260,13 @@ END: postinfo
 
 .post h3 {
      color: #707070;
+     font-size: 1.2rem;
      margin-top:2rem;
      margin-bottom:1rem;
 
+}
+
+.post h3 code {
+     font-size: 1.2rem;
+     
 }
