--- a/css/execas.css
+++ b/css/execas.css
@@ -45,11 +45,11 @@ pre {
 
 blockquote {
      background-color: #ffffff;
-     margin-left:5px;
+     margin-left:30px;
      padding-left: 5px;
      padding-bottom: 2px;
      padding-top: 2px;
-     border-left: 4px solid #dddddd;
+     border: 1px solid #f5f5f5
      color:#000000;
 }
 
