--- a/css/execas.css
+++ b/css/execas.css
@@ -49,7 +49,7 @@ blockquote {
      padding-left: 5px;
      padding-bottom: 2px;
      padding-top: 2px;
-     border: 1px solid #f5f5f5
+     border: 1px solid #f5f5f5;
      color:#000000;
 }
 
