--- a/css/execas.css
+++ b/css/execas.css
@@ -45,7 +45,8 @@ pre {
 
 blockquote {
      background-color: #ffffff;
-     margin-left:30px;
+     margin: 0 auto;
+     width: 80%;
      padding-left: 5px;
      padding-bottom: 2px;
      padding-top: 2px;
