--- a/css/execas.css
+++ b/css/execas.css
@@ -77,7 +77,7 @@ pre code {
 code {
      background-color: #fefefe;
      whitespace:normal;
-     color:#d33682;
+     color:#707070;
      font-size:14px;
      border-width: 1px;
      border-style: solid;
