--- a/css/execas.css
+++ b/css/execas.css
@@ -8,7 +8,8 @@ body {
      font-size: 15px;
      /*background-color: #e5e5e5;*/
      /*background-color: #f2f2f2;*/
-     background-color: #ffffff
+     background-color: #ffffff;
+     color: #222222;
 }
 
 #wrapper {
@@ -77,7 +78,7 @@ pre code {
 code {
      background-color: #fefefe;
      whitespace:normal;
-     color:#707070;
+     color:#000000;
      font-size:14px;
      border-width: 1px;
      border-style: solid;
