--- a/css/execas.css
+++ b/css/execas.css
@@ -233,7 +233,7 @@ postinfo: title, date, tags
     padding: .1rem .2rem .1rem .2rem;
     font-size: 80%;
     border-radius: 3px;   
-    background: #f5f5f5;
+    background: #fefefe;
     color: #000000;
     border: 1px solid #707070
 }
