--- a/css/execas.css
+++ b/css/execas.css
@@ -233,9 +233,9 @@ postinfo: title, date, tags
     padding: .1rem .2rem .1rem .2rem;
     font-size: 80%;
     border-radius: 3px;   
-    background: #fefefe;
+    background: #f5f5f5;
     color: #000000;
-    border: 1px solid #707070
+    border: 1px solid #ccc
 }
 
 .post-tag:hover {
