--- a/css/execas.css
+++ b/css/execas.css
@@ -107,7 +107,7 @@ p {
 }
 
 .header {
-     background-color:#262626;
+     background-color:#f5f5f5;
      color: #f8f8ff;
      margin:0 auto;
      max-width: 720px;
