--- a/css/execas.css
+++ b/css/execas.css
@@ -119,7 +119,7 @@ p {
 .header h1 {
      font-size: 3rem;
      margin-right: 3rem;
-     color: #f8f8ff;
+     color: #000000;
      display: inline;
      margin-top: 0px;
      margin-bottom:0px;
