--- a/css/execas.css
+++ b/css/execas.css
@@ -107,14 +107,14 @@ p {
 }
 
 .header {
-     background-color:#f5f5f5;
+     background-color:#ffffff;
      color: #f8f8ff;
      margin:0 auto;
      max-width: 720px;
      padding: 10px 13px 10px 13px;
-     border: 1px solid #000000;
+     border: 2px solid #000000;
      border-bottom: 2px solid #000000;
-     border-radius: 15px 15px 0px 0px;     
+     border-radius: 0px 30px 0px 0px;     
 }
 
 .header h1 {
