--- a/css/execas.css
+++ b/css/execas.css
@@ -112,8 +112,8 @@ p {
      margin:0 auto;
      max-width: 720px;
      padding: 10px 13px 10px 13px;
-     border: 2px solid #000000;
-     border-bottom: 1px solid #000000;
+     border: 2px solid #ffffff;
+     border-bottom: 2px solid #000000;
      border-radius: 0px 30px 0px 0px;     
 }
 
