--- a/css/execas.css
+++ b/css/execas.css
@@ -111,10 +111,10 @@ p {
      color: #f8f8ff;
      margin:0 auto;
      max-width: 720px;
-     padding: 10px 13px 10px 13px;
+     padding: 10px 13px 10px 0px;
      border: 2px solid #ffffff;
      border-bottom: 2px solid #000000;
-     border-radius: 0px 30px 0px 0px;     
+     /*border-radius: 0px 30px 0px 0px;     */
 }
 
 .header h1 {
