--- a/css/execas.css
+++ b/css/execas.css
@@ -31,6 +31,7 @@ pre {
      /*background-color: #f5f5f5;*/
      background-color: #f6f8fa;
      margin-left:5px;
+     margin-right:5px;
      padding-left: 10px;
      padding-bottom: 12px;
      padding-top: 12px;
