--- a/css/execas.css
+++ b/css/execas.css
@@ -116,7 +116,7 @@ p {
      margin:0 auto;
      max-width: 720px;
      padding: 10px 0px 0px 0px;
-     /*border: 2px solid #ffffff;*/
+     border: 1px solid #707070;
      /*border-bottom: 1px solid #000000;*/
      /*border-radius: 0px 30px 0px 0px;     */
 }
