--- a/css/execas.css
+++ b/css/execas.css
@@ -319,6 +319,7 @@ ul li:before {
 }
 
 .post table {
+     border-collapse: collapse;
      border: 1px solid #ccc;
      font-family: 'Inconsolata';
      width: 100%;
