--- a/css/execas.css
+++ b/css/execas.css
@@ -48,6 +48,7 @@ pre {
 blockquote {
      background-color: #ffffff;
      width: 90%;
+     margin-top: 5px;
      margin-left:0px;
      padding-left: 5px;
      padding-right: 10px;
