--- a/css/execas.css
+++ b/css/execas.css
@@ -88,7 +88,7 @@ code {
      border-width: 1px;
      border-style: solid;
      border-radius:5px;
-     border-color: #eeeeee;
+     /*border-color: #eeeeee;*/
      padding:1px 2px;
 }
 
