--- a/css/execas.css
+++ b/css/execas.css
@@ -81,7 +81,7 @@ pre code {
      padding:0;
 }
 code {
-     background-color: #f6f8fa
+     background-color: #f6f8fa;
      font-family: "Source Code Pro", monospace;
      whitespace:normal;
      color:#000000;
