--- a/css/execas.css
+++ b/css/execas.css
@@ -19,7 +19,7 @@ body {
      max-width: 718px;
      background-color: #ffffff;
      margin: 0 auto; 
-     border: 1px solid #707070;
+     /*border: 1px solid #707070;*/
 }
 
 img {
