--- a/css/execas.css
+++ b/css/execas.css
@@ -127,7 +127,7 @@ p {
 .header {
      font-family: 'Inconsolata', monospace;
      margin-top:0;
-     background-color:#eeeeee;
+     background-color:#FFFFFD;
      color: #dddddd;
      margin:0 auto;
      max-width: 720px;
